
nobase_dist_ppdata_DATA = \
	    courses/doing/terrain.png	\
	    courses/doing/elev.png	\
	    courses/doing/preview.png	\
	    courses/doing/course.nut	\
	    courses/doing/elements.nut	\
	    courses/doing/elements.png	\
	    courses/doing/description.nut	\
	    fonts/FreeSansBoldOblique.ttf	\
	    music/race1-jt.it	\
	    music/wonrace1-jt.it	\
	    music/race2-jt.it	\
	    music/options1-jt.it	\
	    music/start1-jt.it	\
	    music/readme	\
	    textures/menu_top_left.png	\
	    textures/checkmark.png	\
	    textures/snowparticles.png	\
	    textures/gaugespeedmask.png	\
	    textures/splash.png	\
	    textures/herringicon.png	\
	    textures/menu_bottom_left.png	\
	    textures/hudtl.png	\
	    textures/menu_top_right.png	\
	    textures/nopreview.png	\
	    textures/hudtr.png	\
	    textures/snow_button.png	\
	    textures/mirror_button.png	\
	    textures/mask_outline2.png	\
	    textures/gaugeenergymask.png	\
	    textures/wind_button.png	\
	    textures/mask_outline.png	\
	    textures/energymask.png	\
	    textures/gaugeoutline.png	\
	    textures/menu_bottom_right.png	\
		textures/listbox_arrows.png	\
		textures/hscale_arrows.png	\
		textures/noicon.png	\
		textures/speedmask.png	\
		textures/conditions_button.png	\
		textures/mouse_cursor.png	\
		textures/tuxlife.png	\
		textures/menu_title.png	\
		hazel.nut	\
		events/herring_run/deadman/terrain.png	\
		events/herring_run/deadman/elev.png	\
		events/herring_run/deadman/preview.png	\
		events/herring_run/deadman/course.nut	\
		events/herring_run/deadman/elements.png	\
		events/herring_run/deadman/description.nut	\
		events/herring_run/bunny_hill/terrain.png	\
		events/herring_run/bunny_hill/elev.png	\
		events/herring_run/bunny_hill/preview.png	\
		events/herring_run/bunny_hill/course.nut	\
		events/herring_run/bunny_hill/elements.png	\
		events/herring_run/bunny_hill/description.nut	\
		events/herring_run/tux-toboggan_run/terrain.png	\
		events/herring_run/tux-toboggan_run/elev.png	\
		events/herring_run/tux-toboggan_run/README	\
		events/herring_run/tux-toboggan_run/preview.png	\
		events/herring_run/tux-toboggan_run/course.nut	\
		events/herring_run/tux-toboggan_run/elements.png	\
		events/herring_run/tux-toboggan_run/description.nut	\
		events/herring_run/hazzard_valley/terrain.png	\
		events/herring_run/hazzard_valley/elev.png	\
		events/herring_run/hazzard_valley/README	\
		events/herring_run/hazzard_valley/preview.png	\
		events/herring_run/hazzard_valley/course.nut	\
		events/herring_run/hazzard_valley/elements.png	\
		events/herring_run/hazzard_valley/description.nut	\
		events/herring_run/mount_satan/terrain.png	\
		events/herring_run/mount_satan/elev.png	\
		events/herring_run/mount_satan/README	\
		events/herring_run/mount_satan/preview.png	\
		events/herring_run/mount_satan/course.nut	\
		events/herring_run/mount_satan/elements.png	\
		events/herring_run/mount_satan/description.nut	\
		events/herring_run/mount_herring/terrain.png	\
		events/herring_run/mount_herring/elev.png	\
		events/herring_run/mount_herring/README	\
		events/herring_run/mount_herring/preview.png	\
		events/herring_run/mount_herring/course.nut	\
		events/herring_run/mount_herring/elements.png	\
		events/herring_run/mount_herring/description.nut	\
		events/herring_run/event.nut	\
		events/herring_run/skull_mountain/terrain.png	\
		events/herring_run/skull_mountain/elev.png	\
		events/herring_run/skull_mountain/README	\
		events/herring_run/skull_mountain/preview.png	\
		events/herring_run/skull_mountain/course.nut	\
		events/herring_run/skull_mountain/elements.png	\
		events/herring_run/skull_mountain/description.nut	\
		events/herring_run/ski_jump/terrain.png	\
		events/herring_run/ski_jump/elev.png	\
		events/herring_run/ski_jump/README	\
		events/herring_run/ski_jump/preview.png	\
		events/herring_run/ski_jump/course.nut	\
		events/herring_run/ski_jump/elements.png	\
		events/herring_run/ski_jump/description.nut	\
		events/herring_run/high_road/terrain.png	\
		events/herring_run/high_road/elev.png	\
		events/herring_run/high_road/preview.png	\
		events/herring_run/high_road/course.nut	\
		events/herring_run/high_road/elements.png	\
		events/herring_run/high_road/description.nut	\
		events/herring_run/penguins_cant_fly/terrain.png	\
		events/herring_run/penguins_cant_fly/elev.png	\
		events/herring_run/penguins_cant_fly/preview.png	\
		events/herring_run/penguins_cant_fly/course.nut	\
		events/herring_run/penguins_cant_fly/elements.png	\
		events/herring_run/penguins_cant_fly/description.nut	\
		events/herring_run/hamburger_hill/terrain.png	\
		events/herring_run/hamburger_hill/elev.png	\
		events/herring_run/hamburger_hill/README	\
		events/herring_run/hamburger_hill/preview.png	\
		events/herring_run/hamburger_hill/course.nut	\
		events/herring_run/hamburger_hill/elements.png	\
		events/herring_run/hamburger_hill/description.nut	\
		events/herring_run/ive_got_a_woody/terrain.png	\
		events/herring_run/ive_got_a_woody/elev.png	\
		events/herring_run/ive_got_a_woody/preview.png	\
		events/herring_run/ive_got_a_woody/course.nut	\
		events/herring_run/ive_got_a_woody/elements.png	\
		events/herring_run/ive_got_a_woody/description.nut	\
		events/herring_run/ice_labyrinth/terrain.png	\
		events/herring_run/ice_labyrinth/elev.png	\
		events/herring_run/ice_labyrinth/README	\
		events/herring_run/ice_labyrinth/preview.png	\
		events/herring_run/ice_labyrinth/course.nut	\
		events/herring_run/ice_labyrinth/elements.png	\
		events/herring_run/ice_labyrinth/description.nut	\
		events/herring_run/snow_valley/terrain.png	\
		events/herring_run/snow_valley/elev.png	\
		events/herring_run/snow_valley/README	\
		events/herring_run/snow_valley/preview.png	\
		events/herring_run/snow_valley/course.nut	\
		events/herring_run/snow_valley/elements.png	\
		events/herring_run/snow_valley/description.nut	\
		events/herring_run/slalom/terrain.png	\
		events/herring_run/slalom/elev.png	\
		events/herring_run/slalom/README	\
		events/herring_run/slalom/preview.png	\
		events/herring_run/slalom/course.nut	\
		events/herring_run/slalom/elements.png	\
		events/herring_run/slalom/description.nut	\
		events/herring_run/twisty_slope/terrain.png	\
		events/herring_run/twisty_slope/elev.png	\
		events/herring_run/twisty_slope/preview.png	\
		events/herring_run/twisty_slope/course.nut	\
		events/herring_run/twisty_slope/elements.png	\
		events/herring_run/twisty_slope/description.nut	\
		events/herring_run/keep_it_up/terrain.png	\
		events/herring_run/keep_it_up/elev.png	\
		events/herring_run/keep_it_up/preview.png	\
		events/herring_run/keep_it_up/course.nut	\
		events/herring_run/keep_it_up/elements.png	\
		events/herring_run/keep_it_up/description.nut	\
		events/herring_run/bumpy_ride/terrain.png	\
		events/herring_run/bumpy_ride/elev.png	\
		events/herring_run/bumpy_ride/preview.png	\
		events/herring_run/bumpy_ride/course.nut	\
		events/herring_run/bumpy_ride/elements.png	\
		events/herring_run/bumpy_ride/description.nut	\
		events/herring_run/path_of_daggers/terrain.png	\
		events/herring_run/path_of_daggers/elev.png	\
		events/herring_run/path_of_daggers/preview.png	\
		events/herring_run/path_of_daggers/course.nut	\
		events/herring_run/path_of_daggers/elements.png	\
		events/herring_run/path_of_daggers/description.nut	\
		events/herring_run/frozen_river/terrain.png	\
		events/herring_run/frozen_river/elev.png	\
		events/herring_run/frozen_river/preview.png	\
		events/herring_run/frozen_river/course.nut	\
		events/herring_run/frozen_river/elements.png	\
		events/herring_run/frozen_river/description.nut	\
		events/herring_run/the_narrow_way/terrain.png	\
		events/herring_run/the_narrow_way/elev.png	\
		events/herring_run/the_narrow_way/README	\
		events/herring_run/the_narrow_way/preview.png	\
		events/herring_run/the_narrow_way/course.nut	\
		events/herring_run/the_narrow_way/elements.png	\
		events/herring_run/the_narrow_way/description.nut	\
		events/events.nut	\
		models/tux/model.nut	\
		models/tux/model_walk.nut	\
		models/tux2/model.nut	\
		models/tux2/model_walk.nut	\
		translations/ru_RU.nut	\
		translations/en_GB.nut	\
		translations/it_IT.nut	\
		translations/de_DE.nut	\
		translations/nl_NL.nut	\
		translations/nb_NO.nut	\
		translations/fr_FR.nut	\
		translations/es_ES.nut	\
		translations/ca_ES.nut	\
		translations/pt_PT.nut	\
		translations/nn_NO.nut	\
		translations/eu_ES.nut	\
		translations/pl_PL.nut	\
		translations/uk_UA.nut	\
		translations/hu_HU.nut	\
		translations/sv_SE.nut	\
		translations/languages.nut	\
		sounds/tux_hit_tree1.wav	\
		sounds/tux_on_snow1.wav	\
		sounds/tux_on_rock1.wav	\
		sounds/tux_on_ice1.wav	\
		sounds/fish_pickup1.wav	\
		sounds/fish_pickup2.wav	\
		sounds/fish_pickup3.wav	\
		themes/huds/common/huds.nut	\
		themes/items/herrings/herring_dead.png	\
		themes/items/herrings/herring_red.png	\
		themes/items/herrings/items.nut	\
		themes/items/herrings/star.png	\
		themes/items/herrings/herring_green.png	\
		themes/items/flags/flag2.png	\
		themes/items/flags/items.nut	\
		themes/items/stuff/items.nut	\
		themes/items/stuff/life.png	\
		themes/items/common/finish.png	\
		themes/items/common/items.nut	\
		themes/items/common/flag.png	\
		themes/items/common/herring_standard.png	\
		themes/items/common/start.png	\
		themes/conditions/common/nighttop.png	\
		themes/conditions/common/sunny_light.nut	\
		themes/conditions/common/eveningtop.png	\
		themes/conditions/common/nightback.png	\
		themes/conditions/common/eveningfront.png	\
		themes/conditions/common/cloudyleft.png	\
		themes/conditions/common/envmap.png	\
		themes/conditions/common/sunnyleft.png	\
		themes/conditions/common/sunnybottom.png	\
		themes/conditions/common/cloudyfront.png	\
		themes/conditions/common/eveningleft.png	\
		themes/conditions/common/eveningright.png	\
		themes/conditions/common/evening_light.nut	\
		themes/conditions/common/foggy_light.nut	\
		themes/conditions/common/sunnyfront.png	\
		themes/conditions/common/eveningbottom.png	\
		themes/conditions/common/cloudytop.png	\
		themes/conditions/common/cloudyright.png	\
		themes/conditions/common/cloudybottom.png	\
		themes/conditions/common/cloudyback.png	\
		themes/conditions/common/conditions.nut	\
		themes/conditions/common/sunnyback.png	\
		themes/conditions/common/nightfront.png	\
		themes/conditions/common/night_light.nut	\
		themes/conditions/common/sunnyright.png	\
		themes/conditions/common/eveningback.png	\
		themes/conditions/common/nightleft.png	\
		themes/conditions/common/nightright.png	\
		themes/conditions/common/nightenv.png	\
		themes/conditions/common/nightbottom.png	\
		themes/conditions/common/sunnytop.png	\
		themes/conditions/common/eveningenv.png	\
		themes/terrains/add/road.png	\
		themes/terrains/add/terrains.nut	\
		themes/terrains/add/speed.png	\
		themes/terrains/ice/greenice.png	\
		themes/terrains/ice/terrains.nut	\
		themes/terrains/ice/hardice.png	\
		themes/terrains/mud/mudstart.png	\
		themes/terrains/mud/mudstop.png	\
		themes/terrains/mud/mud.png	\
		themes/terrains/mud/mudprint.png	\
		themes/terrains/mud/terrains.nut	\
		themes/terrains/mud/mudparticles.png	\
		themes/terrains/lava/lavastone.png	\
		themes/terrains/lava/terrains.nut	\
		themes/terrains/lava/lava.png	\
		themes/terrains/sand/sand.png	\
		themes/terrains/sand/redsand.png	\
		themes/terrains/sand/terrains.nut	\
		themes/terrains/rock/snowyrock.png	\
		themes/terrains/rock/terrains.nut	\
		themes/terrains/snow/snowygrass.png	\
		themes/terrains/snow/dirtsnow.png	\
		themes/terrains/snow/buttprint.png	\
		themes/terrains/snow/snowparticles.png	\
		themes/terrains/snow/stsnow1.png	\
		themes/terrains/snow/stsnow2.png	\
		themes/terrains/snow/dsnow.png	\
		themes/terrains/snow/dsnow2.png	\
		themes/terrains/snow/terrains.nut	\
		themes/terrains/snow/dirtsnowparticles.png	\
		themes/terrains/snow/buttstart.png	\
		themes/terrains/snow/buttstop.png	\
		themes/terrains/common/snow.png	\
		themes/terrains/common/buttprint.png	\
		themes/terrains/common/snowparticles.png	\
		themes/terrains/common/rock.png	\
		themes/terrains/common/terrains.nut	\
		themes/terrains/common/ice.png	\
		themes/terrains/common/buttstart.png	\
		themes/terrains/common/buttstop.png	\
		themes/models/stuff/barrier.png	\
		themes/models/stuff/barrier.ac	\
		themes/models/stuff/models.nut	\
		themes/models/trees/tree_xmas.ac	\
		themes/models/trees/tree_xmas.png	\
		themes/models/trees/models.nut	\
		themes/models/common/shrub.png	\
		themes/models/common/tree.png	\
		themes/models/common/tree_barren.ac	\
		themes/models/common/shrub.ac	\
		themes/models/common/tree_barren.png	\
		themes/models/common/tree.ac	\
		themes/models/common/models.nut	\
		themes/ppracer.nut	\
	    themes/common.nut	\
	    terrains.png	\
	    init.nut

nobase_nodist_ppdata_DATA = \
	    config.nut

EXTRA_DIST = \
	    config.nut.in


desktopdir = $(datadir)/applications
dist_desktop_DATA = ppracer.desktop

icondir = $(datadir)/pixmaps
dist_icon_DATA = ppracer.png
