
SUBDIRS = squirrel sqstdlib ppogl

AM_CPPFLAGS = -DPP_DATADIR=\"$(ppdatadir)\"

bin_PROGRAMS = ppracer

LDADD = \
		ppogl/libppogl.a	\
		sqstdlib/libsqstdlib.a	\
		squirrel/libsquirrel.a	


ppracer_SOURCES =				\
	course_load.cpp				\
	course_load.h				\
	course_mgr.cpp				\
	course_mgr.h				\
	course_render.cpp			\
	course_render.h				\
	credits.cpp				\
	credits.h				\
	event_select.cpp			\
	event_select.h				\
	elements.cpp				\
	elements.h				\
	fog.cpp					\
	fog.h					\
	fps.cpp					\
	fps.h					\
	gameconfig.cpp				\
	gameconfig.h				\
	game_type_select.cpp			\
	game_type_select.h			\
	game_over.cpp				\
	game_over.h				\
	gl_util.cpp				\
	gl_util.h				\
	hier.cpp				\
	hier.h					\
	hier_cb.cpp				\
	hier_cb.h				\
	hier_util.cpp				\
	hier_util.h				\
	hud.cpp					\
	hud.h					\
	intro.cpp				\
	intro.h					\
	joystick.cpp				\
	joystick.h				\
	keyframe.cpp				\
	keyframe.h				\
	lights.cpp				\
	lights.h				\
	loading.cpp				\
	loading.h				\
	loop.cpp				\
	loop.h					\
	main.cpp				\
	mirror_course.cpp			\
	mirror_course.h				\
	player.cpp				\
	player.h				\
	nmrcl.cpp				\
	nmrcl.h					\
	os_util.cpp				\
	os_util.h				\
	part_sys.cpp				\
	part_sys.h				\
	paused.cpp				\
	paused.h				\
	phys_sim.cpp				\
	phys_sim.h				\
	quadtree.cpp				\
	quadtree.h				\
	race_select.cpp				\
	race_select.h				\
	event_race_select.cpp			\
	event_race_select.h			\
	racing.cpp				\
	racing.h				\
	render_util.cpp				\
	render_util.h				\
	reset.h					\
	reset.cpp				\
	screenshot.cpp				\
	screenshot.h				\
	snow.cpp				\
	snow.h					\
	splash_screen.cpp			\
	splash_screen.h				\
	track_marks.cpp				\
	track_marks.h				\
	tux.cpp					\
	tux.h					\
	tux_shadow.cpp				\
	tux_shadow.h				\
	ppracer.h				\
	view.cpp				\
	view.h					\
	viewfrustum.cpp				\
	viewfrustum.h				\
	winsys.cpp				\
	winsys.h				\
	videoconfig.cpp				\
	videoconfig.h				\
	audioconfig.cpp				\
	audioconfig.h				\
	configmode.cpp				\
	configmode.h				\
	configuration.cpp			\
	configuration.h				\
	generalconfig.cpp			\
	generalconfig.h				\
	joystickconfig.cpp			\
	joystickconfig.h			\
	keyboardconfig.cpp			\
	keyboardconfig.h			\
	graphicsconfig.cpp			\
	graphicsconfig.h			\
	stuff.cpp				\
	stuff.h					\
	ui_snow.cpp				\
	ui_snow.h				\
	game_mgr.cpp				\
	game_mgr.h				\
	racingmode.cpp				\
	racingmode.h				\
	bench.cpp				\
	bench.h					\
	algstuff.cpp				\
	algstuff.h

