

noinst_LIBRARIES = libftgl.a 

libftgl_a_SOURCES = 	\
	FTBBox.h		\
	FTCharToGlyphIndexMap.h	\
	FTCharmap.h		\
	FTFace.h		\
	FTFont.h		\
	FTGL.h		\
	FTGLTextureFont.h	\
	FTGlyph.h		\
	FTGlyphContainer.h	\
	FTLibrary.h		\
	FTPoint.h		\
	FTSize.h		\
	FTVector.h		\
	FTTextureGlyph.h	\
	\
	\
	FTCharmap.cpp		\
	FTFace.cpp		\
	FTFont.cpp		\
	FTGLTextureFont.cpp	\
	FTGlyph.cpp		\
	FTGlyphContainer.cpp	\
	FTLibrary.cpp		\
	FTPoint.cpp		\
	FTSize.cpp		\
	FTTextureGlyph.cpp 

EXTRA_DIST = \
	license.txt		\
	README.txt
