# makefile for PPOGL

noinst_LIBRARIES = libppogl.a

libppogl_a_SOURCES = 		\
	config.cpp		\
	config.h		\
	font.cpp		\
	font.h			\
	ppogl_script.cpp	\
	ppogl_script.h		\
	textures.cpp		\
	textures.h		\
	translation.cpp 	\
	translation.h		\
	ui.h			\
	audio.h			\
	\
	\
	base/assert.cpp		\
	base/assert.h		\
	base/color.cpp		\
	base/color.h		\
	base/defs.h		\
	base/errors.cpp		\
	base/errors.h		\
	base/glwrappers.cpp	\
	base/glwrappers.h	\
	base/glextensions.cpp	\
	base/glextensions.h	\
	base/glstuff.cpp	\
	base/glstuff.h		\
	base/os.cpp		\
	base/os.h		\
	base/refptr.cpp		\
	base/refptr.h		\
	base/resourcemgr.h	\
	base/signal.h		\
	base/signal.cpp		\
	base/singleton.h	\
	base/vec2d.cpp		\
	base/vec2d.h		\
	base/vec3d.cpp		\
	base/vec3d.h		\
	base/vec3f.cpp		\
	base/vec3f.h		\
	base/vec4f.cpp		\
	base/vec4f.h		\
	\
	\
	images/image.cpp	\
	images/image.h		\
	images/readPNG.cpp	\
	images/readPNG.h	\
	images/writePPM.cpp	\
	images/writePPM.h	\
	\
	\
	ui/widget.cpp		\
	ui/widget.h		\
	ui/button.cpp		\
	ui/button.h		\
	ui/label.cpp		\
	ui/label.h		\
	ui/uimgr.cpp		\
	ui/uimgr.h		\
	ui/uitheme.cpp		\
	ui/uitheme.h		\
	ui/alignment.cpp	\
	ui/alignment.h		\
	ui/checkbox.cpp		\
	ui/checkbox.h		\
	ui/listbox.cpp		\
	ui/listbox.h		\
	ui/imagebutton.cpp	\
	ui/imagebutton.h	\
	ui/entry.cpp		\
	ui/entry.h		\
	ui/textarea.cpp		\
	ui/textarea.h		\
	ui/scale.cpp		\
	ui/scale.h		\
	\
	\
	audio/sound.cpp		\
	audio/sound.h		\
	audio/music.cpp		\
	audio/music.h		\
	audio/audiomgr.cpp	\
	audio/audiomgr.h	\
	\
	\
	sg/sg.h			\
	sg/geoms.cpp		\
	sg/geoms.h		\
	sg/materials.cpp	\
	sg/materials.h		\
	sg/vnc.cpp		\
	sg/vnc.h		\
	\
	\
	models/model.cpp	\
	models/model.h		\
	models/model_ac.cpp	\
	models/model_ac.h



INCLUDES = -I../ -I../squirrel/ -I../sqstdlib/
