# makefile for squirrel's standard library

noinst_LIBRARIES = libsqstdlib.a

libsqstdlib_a_SOURCES = \
		sqstdblob.cpp \
		sqstdio.cpp \
		sqstdstream.cpp \
		sqstdmath.cpp \
		sqstdsystem.cpp \
		sqstdstring.cpp \
		sqstdaux.cpp \
		sqstdrex.cpp	\
		sqstdaux.h	\
		sqstdblob.h	\
		sqstdblobimpl.h	\
		sqstdio.h	\
		sqstdmath.h	\
		sqstdstream.h	\
		sqstdstring.h	\
		sqstdsystem.h

INCLUDES = -I$(top_srcdir)/src/squirrel/

EXTRA_DIST = \
	COPYRIGHT
