# makefile for squirrel

noinst_LIBRARIES = libsquirrel.a

libsquirrel_a_SOURCES = 	\
		sqapi.cpp \
		sqbaselib.cpp \
		sqfuncstate.cpp \
		sqdebug.cpp \
		sqlexer.cpp \
		sqobject.cpp \
		sqcompiler.cpp \
		sqstate.cpp \
		sqtable.cpp \
		sqmem.cpp \
		sqvm.cpp \
		sqclass.cpp \
		sqarray.h	\
		sqclass.h	\
		sqclosure.h	\
		sqcompiler.h	\
		sqfuncproto.h	\
		sqfuncstate.h	\
		sqlexer.h	\
		sqobject.h	\
		sqopcodes.h	\
		sqpcheader.h	\
		sqstate.h	\
		sqstring.h	\
		sqtable.h	\
		squirrel.h	\
		squserdata.h	\
		squtils.h	\
		sqvm.h

EXTRA_DIST = \
	COPYRIGHT	\
	HISTORY

